--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PORT =5000
 MONGO_URI="mongodb+srv://rtcaras:AJErose1@cluster0.irqk9qf.mongodb.net/Ecommerce?retryWrites=true&w=majority&appName=Cluster0"
 NODE_ENV=development
 JWT_SECRET = mysecret
