--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
